# quotelens

./: .env.example  .gitattributes  .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: verify.sh
.githooks/: commit-msg
backend/: pyproject.toml
backend/app/: auth.py  config.py  deps.py  main.py
backend/app/db/: repo.py
backend/app/pipeline/: events.py  graph.py  schemas.py  state.py  tracing.py
backend/app/pipeline/nodes/: analyze_photos.py  compile_quote.py  draft_line_items.py  match_pricebook.py  parse_walkthrough.py  transcribe.py  validate.py
backend/app/routes/: captures.py  generate.py  quotes.py
backend/app/services/: bundle.py  claude.py  factory.py  protocols.py  quote_store.py  sinks.py  storage.py  transcription.py
backend/scripts/: configure_email_smtp.py  export_schema.py  integration_run.py  mint_login_code.py  seed_live_demo.py  seed_web_sample.py
backend/tests/: conftest.py  fakes.py  test_auth.py  test_force_retry_seam.py  test_pipeline_happy_path.py  test_pipeline_retry.py  test_quote_models.py  test_regenerate.py  test_regenerate_route.py  test_review_regressions.py  test_routes.py  test_schema_artifact.py  test_service_bundle_caching.py  test_validate_node.py
backend/tests/fixtures/: generate_fixtures.py
docs/: DECISIONS.md  DEMO_RUNBOOK.md  SCREENSHOT_RUNBOOK.md
mobile/: app.json  eslint.config.js  package.json  tsconfig.json
schema/: quote.schema.json
store/: listing.md  privacy-policy.md
supabase/: config.toml
web/: package.json  (+1 more)
(+55 files in other folders)
